--- a/src/main/resources/templates/job-detail.html
+++ b/src/main/resources/templates/job-detail.html
@@ -9,6 +9,28 @@
 <div class="container body-content">
 
     <!-- // TODO #2 - display the job fields, one per row -->
+    <table>
+        <tr>
+            <td>Job description:</td>
+            <td th:text="${job.getName()}"></td>
+        </tr>
+        <tr>
+            <td>Employer:</td>
+            <td th:text="${job.getEmployer()}"></td>
+        </tr>
+        <tr>
+            <td>Location:</td>
+            <td th:text="${job.getLocation()}"></td>
+        </tr>
+        <tr>
+            <td>Position type:</td>
+            <td th:text="${job.getPositionType()}"></td>
+        </tr>
+        <tr>
+            <td>Core competency:</td>
+            <td th:text="${job.getCoreCompetency()}"></td>
+        </tr>
+    </table>
 
 </div>
 
